--- a/signup2.html
+++ b/signup2.html
@@ -74,8 +74,60 @@
       position: relative;
       height: 100%;
       margin: 0 auto;
-
     }
+
+    .subnav {
+      position: relative;
+      display: block;
+      width: 100%;
+      height: 61px;
+      background: white;
+    }
+    .subnav .container {
+    max-width: 1024px;
+    margin: auto;
+    box-sizing: content-box;
+}
+.container h2 {
+  line-height: 61px;
+  font-size: 24px;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0;
+}
+.menu-wrapper {
+  display: block;
+  position: relative;
+  float: right;
+}
+.subnav .menu {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+ul {
+  display: block;
+  position: relative;
+  border-bottom: 1px solid #d6d6d6;
+}
+li {
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+  margin-left: 50px;
+}
+li > a {
+    text-decoration: none;
+    /* border-bottom: 1px solid #d6d6d6; */
+    color: #000;
+    line-height: 60px;
+    font-size: 12px;
+    font-weight: 400;
+    opacity: .8;
+    font-style: normal;
+    font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+}
+
     .form-split {
       width: 460px;
       position: relative;
@@ -204,6 +256,25 @@
         <span></span> <input type="text" name="" value=""> <a href="#"></a>
       </div>
     </nav>
+
+    <div class="subnav">
+      <div class="container">
+        <h2>Apple&nbsp;ID</h2>
+        <div class="menu-wrapper">
+            <ul class="menu">
+                <li class="item">
+                    <a href="/">Вход в учетную запись</a>
+                </li>
+                <li class="item  active">
+                    <a href="/account">Создание Apple&nbsp;ID</a>
+                </li>
+                <li class="item">
+                    <a href="/faq">Часто задаваемые вопросы</a>
+                </li>
+            </ul>
+        </div>
+      </div>
+    </div>
 
     <div class="banner">
       <div class="color-block">
