--- a/signup7.html
+++ b/signup7.html
@@ -10,6 +10,7 @@
     }
     body {
       background-color: #E6DACA;
+      overflow: hidden;
     }
     .circle {
     position: absolute;
@@ -38,11 +39,127 @@
       top: calc(50vh - 450px);
     }
     .figure4 {
+      background-color: #E6DACA;
+      height: 800px;
+      width: 800px;
+      left: calc(50vw - 400px);
+      top: calc(50vh - 400px);
+    }
+    .figure5 {
+      position: absolute;
+      display: block;
       background-color: black;
+      height: 900px;
+      width: 100px;
+      left: 40vw;
+      top: 0px;
+      transform: rotate(45deg);
+    }
+    .figure6 {
+      position: absolute;
+      display: block;
+      background-color: #ACAAB8;
+      height: 800px;
+      width: 100px;
+      left: 50vw;
+      top: 20vh;
+      transform: rotate(45deg);
+    }
+    .figure7 {
+      background-color: #CA2208;
       height: 500px;
       width: 500px;
       left: calc(50vw - 250px);
       top: calc(50vh - 250px);
+    }
+    .figure8 {
+      position: absolute;
+      display: block;
+      background-color: black;
+      height: 300px;
+      width: 300px;
+      left: calc(50vw - 150px);
+      top: calc(50vh - 150px);
+    }
+    .figure9 {
+      position: absolute;
+      display: block;
+      background-color: black;
+      height: 300px;
+      width: 100px;
+      bottom: -20px;
+      right: -10px;
+      transform: rotate(-45deg);
+    }
+    .figure10 {
+      position: absolute;
+      display: block;
+      background-color: black;
+      height: 1000px;
+      width: 50px;
+      bottom: 100px;
+      right: 100px;
+      transform: rotate(-45deg);
+    }
+    .figure11 {
+      position: absolute;
+      display: block;
+      background-color: black;
+      height: 700px;
+      width: 50px;
+      bottom: -200px;
+      right: 300px;
+      transform: rotate(-45deg);
+    }
+    .figure12 {
+      position: absolute;
+      display: block;
+      background-color: black;
+      height: 500px;
+      width: 50px;
+      bottom: -200px;
+      right: 300px;
+      transform: rotate(-45deg);
+    }
+    .figure13 {
+      position: absolute;
+      display: block;
+      background-color: #ACAAB8;
+      height: 500px;
+      width: 50px;
+      top: -200px;
+      left: 300px;
+      transform: rotate(-45deg);
+    }
+    .figure14 {
+      position: absolute;
+      display: block;
+      background-color: #ACAAB8;
+      height: 500px;
+      width: 50px;
+      top: 0px;
+      left: 300px;
+      transform: rotate(-45deg);
+    }
+    .figure15 {
+      position: absolute;
+      display: block;
+      background-color: #84271F;
+      height: 500px;
+      width: 50px;
+      top: 0px;
+      left: -100px;
+      transform: rotate(-45deg);
+    }
+    .figure16 {
+      position: absolute;
+      display: block;
+      background-color: #CA2208;
+      height: 500px;
+      width: 50px;
+      top: -100px;
+      left: -50px;
+      transform: rotate(-45deg);
     }
     </style>
     <script type="text/javascript">
@@ -54,9 +171,17 @@
 <div class="circle figure2"></div>
 <div class="circle figure3"></div>
 <div class="circle figure4"></div>
-<div class="circle figure5"></div>
-<div class="circle figure6"></div>
+<div class="figure5"></div>
+<div class="figure6"></div>
 <div class="circle figure7"></div>
-<div class="circle figure8"></div>
+<div class="figure8"></div>
+<div class="figure9"></div>
+<div class="figure10"></div>
+<div class="figure11"></div>
+<div class="figure12"></div>
+<div class="figure13"></div>
+<div class="figure14"></div>
+<div class="figure15"></div>
+<div class="figure16"></div>
   </body>
 </html>
